fix(styles): wrap pagination on small screens

--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -311,6 +311,7 @@ main {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		flex-wrap: wrap;
 
 		& > * + * {
 			margin-inline-start: 1ch;
